refactor(core): deduplicate getOrBuild*Client with generic helper
Introduces getOrBuildCachedClient[T] to eliminate three near-identical
client-builder methods (cleanup, discovery, dynamic) that dupl flagged.
Also tightens the dupl threshold from 150 to 100 and extends the dupl
exclusion to cover tests/ helper files alongside _test.go files.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -167,7 +167,7 @@ linters:
       min-occurrences: 3
 
     dupl:
-      threshold: 150
+      threshold: 100
 
     gocritic:
       enabled-tags:
@@ -264,7 +264,7 @@ linters:
   exclusions:
     generated: lax
     rules:
-      # Exclude some linters from running on test files
+      # Exclude some linters from running on test files and test helpers
       - linters:
           - dupl
           - forcetypeassert
@@ -272,7 +272,7 @@ linters:
           - goconst
           - gocyclo
           - unparam
-        path: _test\.go
+        path: (_test\.go|^tests/)
 
       # TestParallelAcquisition is intentionally complex (parallel test orchestration)
       - linters:
