fix(lint): resolve nolintlint/ireturn conflict for public API interfaces
nolintlint reported the ireturn directives as unused while ireturn
still flagged the same lines. Fix by allowing the project's own
interfaces (Manager, Instance) in the ireturn config — a cleaner
approach than per-site nolint comments for intentional API design.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -260,6 +260,8 @@ linters:
         - empty
         - stdlib
         - generic
+        - github.com/giantswarm/k8senv.Manager
+        - github.com/giantswarm/k8senv.Instance
 
   exclusions:
     generated: lax
